# capex4

./: .gitignore  AGENTS.md  CONTEXT.md  PROOF.md  README.md  pyproject.toml  start-capex4.cmd
.cursor/plans/: reserve_timeline_charts_a3f9ca5c.plan.md  server-svg-charts_d8f06c56.plan.md
.cursor/rules/: conduct.mdc  doc-style.mdc  mdc-authoring.mdc  repo-layout.mdc  safety.mdc  thermonuclear.mdc
src/capex3/: __init__.py
src/capex3/core/: AGENTS.md  __init__.py  calculate_rental_capex.py  deal_inputs.py  emergency_debt_ledger.py  errors.py  financial.py  repair_reserve_path_trace.py  reserve_first_shortfall_solver.py  solve_rental_capex.py  solver_question_catalog.py  (+1 more)
tests/: AGENTS.md  fixture_parity.py  test_architecture_gates.py  test_calculation_result_traces.py  test_calculator_resilience_contract.py  test_capex3.py  test_cash_flow_stability_evidence.py  test_deal_input_round_trip.py  test_emergency_debt_ledger.py  test_evidence_debug_render.py  test_fixture_drift_trial.py  test_fixture_parity.py  test_focused_verification.py  test_no_compat_shim_packages.py  test_offer_ready_evidence.py  test_presentation_htmx_renderer.py  test_pro_forma_fixture_contract.py  test_repair_reserve_path_trace.py  test_reserve_account_apy_parity.py  test_reserve_first_shortfall_solver.py  test_reserve_timeline_truth.py  test_shock_survival.py  test_solver_question_catalog.py
tests/fixtures/: README.md  model-verification-cases.json  spreadsheet-defaults.json  workbook-parity-matrix.md
tmp/: domain-spoke-architecture.md  reserve-timeline-handoff.md
tools/: start-capex4.ps1
(+47 files in other folders)
